# shiny

./: CMakeLists.txt  Jakefile  run.bat
proto/: renderRequest.proto
src/: geom.hpp  platform.hpp  server.hpp  shiny.cpp
vis/: index.html  tsd.json
vis/css/: main.css
vis/data/: example.js
vis/js/: main.js  plugins.js
